--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,16 +27,16 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1 float-right">
                         <li class="nav-item"> 
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LegendInfoes" asp-action="Index">Legend</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Senarios" asp-action="Index">Senarios</a>
                         </li>
                     </ul>
-                </div>*@
+                </div>
 
 
             </div>
