Update Check Box

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -136,7 +136,7 @@
                                 <td style="text-align:center;vertical-align: middle">
 
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="Productive">
+                                        <input type="radio" name="scenario" class="custom-control-input" id="Productive">
                                         <label class="custom-control-label" for="Productive" data-toggle="tooltip" data-placement="top" title="Productive">Productive</label>
                                     </div>
                                 </td>
@@ -144,7 +144,7 @@
                                 <td style="text-align: center;"> <label id="e_high"><img width="50" height="50" src="~/images/e_high.png" /></label></td>
                                 <td style="text-align: center; vertical-align: middle ">
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="Resilent">
+                                        <input type="radio" name="scenario" class="custom-control-input" id="Resilent">
                                         <label class="custom-control-label" for="Resilent" data-toggle="tooltip" data-placement="top" title="Resilent">Resilent</label>
                                     </div>
                                 </td>
@@ -163,14 +163,14 @@
                                 <td style="text-align:center"></td>
                                 <td style="text-align:center;vertical-align: middle">
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="Moderate">
+                                        <input type="radio" name="scenario" class="custom-control-input" id="Moderate">
                                         <label class="custom-control-label" for="Moderate" data-toggle="tooltip" data-placement="top" title="Moderate">Moderate</label>
                                     </div>
                                 </td>
                                 <td style="text-align: center;"><label id="e_low"><img width="50" height="50" src="~/images/e_low.png" /></label></td>
                                 <td style="text-align: center;vertical-align: middle">
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="Active">
+                                        <input type="radio" name="scenario" class="custom-control-input" id="Active">
                                         <label class="custom-control-label" for="Active" data-toggle="tooltip" data-placement="top" title="Active">Active</label>
                                     </div>
                                 </td>
